<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a7"
    tools:context=".InformationPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colordarkblue"
            android:text="@string/subinfo1content"
            android:textColor="@color/letters" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colordarkblue"
            android:text="@string/subinfo22content"
            android:textColor="@color/letters" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colordarkblue"
            android:text="@string/subinfo3content"
            android:textColor="@color/letters" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colordarkblue"
            android:text="@string/subinfo4content"
            android:textColor="@color/letters" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colordarkblue"
            android:text="@string/subinfo5content"
            android:textColor="@color/letters" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:text="Return Menu" />

        <!--        <TextView-->
<!--            android:id="@+id/returntext"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/textView5"-->
<!--            android:layout_alignParentStart="true"-->
<!--            android:layout_alignParentLeft="true"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_alignParentRight="true"-->
<!--            android:layout_alignParentBottom="true"-->
<!--&lt;!&ndash;            android:layout_marginStart="154dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_marginLeft="154dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_marginTop="116dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_marginEnd="140dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_marginRight="140dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_marginBottom="170dp"&ndash;&gt;-->
<!--            android:gravity="center"-->
<!--            android:text="Return Menu" />-->

    </LinearLayout>

    \
</androidx.constraintlayout.widget.ConstraintLayout>